# rust-mini-signer

./: Cargo.toml  README.md
src/: main.rs  signer.rs
